--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -67,7 +67,7 @@
         </div>
         <div id="tx-json-preview-box" class="w3-modal w3-animate-zoom tx-hidden">
                 <div class="w3-modal-content">
-                    <div class="w3-display-container w3-border w3-border-teal tx-content-64">
+                    <div class="w3-display-container tx-content-64">
                         <div class="w3-display-topright">
                             <span id="tx-json-preview-box-close"><i class="material-symbols-outlined tx-margin-top-8 tx-margin-right-8 tx-red-icon-24">close</i></span>
                         </div>
@@ -76,13 +76,13 @@
                         </div>
                         <div id="tx-json-preview-box-title" class="w3-display-middle tx-text-16">content title</div>
                         <div class="w3-display-bottomleft">
-                            <span id="tx-json-preview-box-tree" class="w3-tag w3-blue tx-text-12 tx-padding-button">Tree</span>
+                            <span id="tx-json-preview-box-tree" class="w3-tag w3-blue tx-text-12 tx-padding-button tx-margin-left-8">Tree</span>
                             <span id="tx-json-preview-box-code" class="w3-tag w3-blue tx-text-12 tx-padding-button">Code</span>
                             <span id="tx-json-preview-box-preview" class="w3-tag w3-blue tx-text-12 tx-padding-button">Preview</span>
                         </div>
                     </div>
-                    <div id="tx-json-preview-box-content">
-                    </div>
+                    <div class="w3-panel" id="tx-json-preview-box-content"></div>
+                    <div class="tx-content-24"></div>
                 </div>
         </div>
         <script>
