--- a/cmd/web/admin/site/index.html
+++ b/cmd/web/admin/site/index.html
@@ -189,9 +189,9 @@
                 Admin.getJson("/admin/enum/load/all",resp=>{
                     Html.enumList(resp);
                 });
-                Admin.getJson("/admin/env",resp=>{
-                    console.log(resp);
-                });
+                //Admin.getJson("/admin/env",resp=>{
+                    //console.log(resp);
+                //});
             }
 
             function create_new_enum(){
